# kaldi-gst-nnet-plugin

./: .gitignore  CMakeLists.txt  README.md  gst_audio_source.cc  gst_audio_source.h  gstkaldinnet2onlinedecoder-shared.cc  gstkaldinnet2onlinedecoder-shared.h  gstkaldinnet2onlinedecoder.cc  gstkaldinnet2onlinedecoder.h  kaldimarshal.cc  kaldimarshal.h  kaldimarshal.list  simple_option.cc  simple_option.h  test.sh
cmake/: kaldi.cmake
test/: gst-plugin-test.cpp
